Legger tilbake det gamle REST endepunktet siden den nye krever en gui endring.